changes landing page to groups index

--- a/test/fixtures/user_groups.yml
+++ b/test/fixtures/user_groups.yml
@@ -1,15 +1,12 @@
 # == Schema Information
 #
-# Table name: groups
+# Table name: user_groups
 #
-#  id           :integer          not null, primary key
-#  title        :string           not null
-#  description  :text             not null
-#  location     :string           not null
-#  banner_url   :string           not null
-#  organizer_id :integer          not null
-#  created_at   :datetime         not null
-#  updated_at   :datetime         not null
+#  id         :integer          not null, primary key
+#  user_id    :integer          not null
+#  group_id   :integer          not null
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
