--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^1.0.2",
+    "react-addons-linked-state-mixin": "^0.14.2",
     "webpack": "^1.12.14"
   },
   "engines": {
