--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     "bootstrap": "^3.3.6",
     "flux": "^2.1.1",
     "history": "^1.13.1",
+    "moment": "^2.11.2",
     "react": "^0.14.7",
+    "react-addons-linked-state-mixin": "^0.14.2",
+    "react-bootstrap-datetimepicker": "0.0.22",
     "react-dom": "^0.14.7",
     "react-router": "^1.0.2",
-    "react-addons-linked-state-mixin": "^0.14.2",
     "webpack": "^1.12.14"
   },
   "engines": {
-  "node": "4.1.1",
-  "npm": "2.1.x"
+    "node": "4.1.1",
+    "npm": "2.1.x"
   }
 }
